aplicacion de plantilla

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,5 +31,5 @@ en:
   dep_editar: "Editando departamento"
   dep_msg_prohibido: " no se puede guardar este departamento"
   dep_nuevo: "Nuevo departamento"
-  dep_lista: "Lista de dapartamentos"
-  dep_crear: "Crear departamento"
+  dep_lista: "Lista de departamentos"
+  dep_crear: "Crear departamentos"
