--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -1,13 +1,17 @@
 en:
   simple_form:
-    "yes": 'Yes'
+    "yes": 'Si'
     "no": 'No'
+    labels:
+      cargo:
+        tipo_id: 'Nomina'
+        sueldos:
+          monto: 'Sueldo Basico'
+
     required:
-      text: 'required'
+      text: 'Campo Requerido'
       mark: '*'
-      # You can uncomment the line below if you need to overwrite the whole required html.
-      # When using html, text and mark won't be used.
-      # html: '<abbr title="required">*</abbr>'
+      html: '<abbr title="Campo Requerido" class:"text-danger" >*</abbr>'
     error_notification:
       default_message: "Please review the problems below:"
     # Examples
