--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -14,6 +14,7 @@ en:
             empleado: 'Fórmula'
             patrono: 'Fórmula (Aporte Patronal)'
       concepto:
+        condicion: 'Condición'
         formulas:
           empleado: 'Fórmula'
           patrono: 'Fórmula (Aporte Patronal)'
