arreglos vistas y pfds

--- a/config/locales/simple_form.en.yml
+++ b/config/locales/simple_form.en.yml
@@ -15,6 +15,7 @@ en:
             patrono: 'Fórmula (Aporte Patronal)'
       concepto:
         condicion: 'Condición'
+        tipo_ids: 'Nóminas'
         formulas:
           empleado: 'Fórmula'
           patrono: 'Fórmula (Aporte Patronal)'
