--- a/config/locales/devise.es.yml
+++ b/config/locales/devise.es.yml
@@ -1,6 +1,6 @@
 # Traducciones adicionales en https://github.com/plataformatec/devise/wiki/I18n
 
-en:
+es:
   devise:
     confirmations:
       confirmed: "Tu cuenta ha sido confirmada."
@@ -9,10 +9,10 @@ en:
     failure:
       already_authenticated: "Ya has iniciado sesión."
       inactive: "Tu cuenta aún no ha sido activada."
-      invalid: "%{authentication_keys} o contraseña inválidos."
+      invalid: "Email o contraseña inválidos."
       locked: "Tu cuenta ha sido bloqueada."
       last_attempt: "Tienes un último intento antes de que tu cuenta sea bloqueada."
-      not_found_in_database: "%{authentication_keys} o contraseña inválidos."
+      not_found_in_database: "Email o contraseña inválidos."
       timeout: "Tu sesión ha expirado, por favor inicia sesión nuevamente para continuar."
       unauthenticated: "Necesitas iniciar sesión o registrarte para continuar."
       unconfirmed: "Debes confirmar tu cuenta para continuar."
